tests/snapshots/compile__wgsl_generate_mandelbrot_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_mandelbrot1_background: vec4f,
    u_control_mandelbrot1_centerX: f32,
    u_control_mandelbrot1_centerY: f32,
    u_control_mandelbrot1_foreground: vec4f,
    u_control_mandelbrot1_iterations: f32,
    u_control_mandelbrot1_phaseOffset: f32,
    u_control_mandelbrot1_strength: f32,
    u_control_mandelbrot1_zoom: f32,
    u_control_mix4_amount: f32,
    u_control_mix5_amount: f32,
    u_control_rgba3_a: f32,
    u_control_rgba3_b: f32,
    u_count_mandelbrot1_clock: vec2f,
    u_opt_mix4_curve: i32,
    u_opt_mix4_method: i32,
    u_opt_mix5_curve: i32,
    u_opt_mix5_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn mandelbrot1_color(uv: vec2f) -> vec4f {
    let c = vec2f(u.u_control_mandelbrot1_centerX, u.u_control_mandelbrot1_centerY) + uv / max(abs(u.u_control_mandelbrot1_zoom), 1e-6);
    var z = vec2f(0.0);
    let maxIter = i32(clamp(u.u_control_mandelbrot1_iterations, 1.0, 500.0));
    var i = 0;
    for (; i < maxIter; i++) {
        z = vec2f(z.x * z.x - z.y * z.y, 2.0 * z.x * z.y) + c;
        if (dot(z, z) > 10000.0) { break; }
    }
    let inside = select(0.0, 1.0, i >= maxIter);
    var smoothT = 0.0;
    if (i < maxIter) {
        let nu = log(log(dot(z, z)) * 0.5 / log(2.0)) / log(2.0);
        smoothT = clamp((f32(i) + 1.0 - nu) / f32(maxIter), 0.0, 1.0);
    }
    return mix(u.u_control_mandelbrot1_background, u.u_control_mandelbrot1_foreground, smoothT);
}

fn mandelbrot1_map(uv: vec2f) -> vec4f {
    let c = vec2f(u.u_control_mandelbrot1_centerX, u.u_control_mandelbrot1_centerY) + uv / max(abs(u.u_control_mandelbrot1_zoom), 1e-6);
    var z = vec2f(0.0);
    let maxIter = i32(clamp(u.u_control_mandelbrot1_iterations, 1.0, 500.0));
    var i = 0;
    for (; i < maxIter; i++) {
        z = vec2f(z.x * z.x - z.y * z.y, 2.0 * z.x * z.y) + c;
        if (dot(z, z) > 10000.0) { break; }
    }
    let inside = select(0.0, 1.0, i >= maxIter);
    var smoothT = 0.0;
    if (i < maxIter) {
        let nu = log(log(dot(z, z)) * 0.5 / log(2.0)) / log(2.0);
        smoothT = clamp((f32(i) + 1.0 - nu) / f32(maxIter), 0.0, 1.0);
    }
    var finalUV: vec2f;
    if (i < maxIter) {
        let tu = floor_mod(atan2(z.y, z.x) / (2.0 * PI) + (u.u_count_mandelbrot1_clock.y + u.u_control_mandelbrot1_phaseOffset), 1.0);
        let tv = log2(log(dot(z, z)) / log(10000.0));
        finalUV = vec2f(tu, mix(tv, 1.0 - tv, floor_mod(f32(i), 2.0)));
    } else {
        finalUV = uv + z * (u.u_control_mandelbrot1_strength);
    }
    return defaultUvMap(finalUV);
}

fn mix4_output(uv: vec2f) -> vec4f {
    let a = mandelbrot1_color(uv);
    let b = mandelbrot1_map(uv);
    let amt = clamp(u.u_control_mix4_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix4_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix4_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

fn mandelbrot1_smooth(uv: vec2f) -> f32 {
    let c = vec2f(u.u_control_mandelbrot1_centerX, u.u_control_mandelbrot1_centerY) + uv / max(abs(u.u_control_mandelbrot1_zoom), 1e-6);
    var z = vec2f(0.0);
    let maxIter = i32(clamp(u.u_control_mandelbrot1_iterations, 1.0, 500.0));
    var i = 0;
    for (; i < maxIter; i++) {
        z = vec2f(z.x * z.x - z.y * z.y, 2.0 * z.x * z.y) + c;
        if (dot(z, z) > 10000.0) { break; }
    }
    let inside = select(0.0, 1.0, i >= maxIter);
    var smoothT = 0.0;
    if (i < maxIter) {
        let nu = log(log(dot(z, z)) * 0.5 / log(2.0)) / log(2.0);
        smoothT = clamp((f32(i) + 1.0 - nu) / f32(maxIter), 0.0, 1.0);
    }
    return smoothT;
}

fn mandelbrot1_mask(uv: vec2f) -> f32 {
    let c = vec2f(u.u_control_mandelbrot1_centerX, u.u_control_mandelbrot1_centerY) + uv / max(abs(u.u_control_mandelbrot1_zoom), 1e-6);
    var z = vec2f(0.0);
    let maxIter = i32(clamp(u.u_control_mandelbrot1_iterations, 1.0, 500.0));
    var i = 0;
    for (; i < maxIter; i++) {
        z = vec2f(z.x * z.x - z.y * z.y, 2.0 * z.x * z.y) + c;
        if (dot(z, z) > 10000.0) { break; }
    }
    let inside = select(0.0, 1.0, i >= maxIter);
    var smoothT = 0.0;
    if (i < maxIter) {
        let nu = log(log(dot(z, z)) * 0.5 / log(2.0)) / log(2.0);
        smoothT = clamp((f32(i) + 1.0 - nu) / f32(maxIter), 0.0, 1.0);
    }
    return inside;
}

fn rgba3_output(uv: vec2f) -> vec4f {
    return vec4f(mandelbrot1_smooth(uv), mandelbrot1_mask(uv), u.u_control_rgba3_b, u.u_control_rgba3_a);
}

fn mix5_output(uv: vec2f) -> vec4f {
    let a = mix4_output(uv);
    let b = rgba3_output(uv);
    let amt = clamp(u.u_control_mix5_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix5_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix5_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix5_output(uv);
}
