tests/snapshots/compile__wgsl_generate_phyllotaxis_connected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_checkerboard7_color1: vec4f,
    u_control_checkerboard7_color2: vec4f,
    u_control_checkerboard7_frequency: f32,
    u_control_checkerboard8_color1: vec4f,
    u_control_checkerboard8_color2: vec4f,
    u_control_checkerboard8_frequency: f32,
    u_control_vignette3_radius: f32,
    u_control_vignette3_softness: f32,
    u_control_vignette4_radius: f32,
    u_control_vignette4_softness: f32,
    u_control_vignette5_radius: f32,
    u_control_vignette5_softness: f32,
    u_control_vignette6_radius: f32,
    u_control_vignette6_softness: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn vignette3_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette3_radius;
    let softness = max(u.u_control_vignette3_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette4_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette4_radius;
    let softness = max(u.u_control_vignette4_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette5_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette5_radius;
    let softness = max(u.u_control_vignette5_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette6_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette6_radius;
    let softness = max(u.u_control_vignette6_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn checkerboard7_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard7_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard7_color1;
    let c2 = u.u_control_checkerboard7_color2;
    return mix(c1, c2, checker);
}

fn checkerboard8_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard8_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard8_color1;
    let c2 = u.u_control_checkerboard8_color2;
    return mix(c1, c2, checker);
}

fn phyllotaxis1_output(uv: vec2f) -> vec4f {
    let count = max(vignette3_mask(uv), 1.0);
    let maxR = max(vignette4_mask(uv), 1e-4);
    let seedAngle = (vignette5_mask(uv)) * 2.0 * PI;
    let dotSize = vignette6_mask(uv);
    let last = max(count - 1.0, 1.0);
    let r = length(uv);
    let lo = max(r - dotSize, 0.0) / maxR;
    let hi = (r + dotSize) / maxR;
    let first = i32(floor(last * lo * lo));
    let stop = i32(min(ceil(last * hi * hi), count - 1.0));
    var minDist = 1e6;
    for (var i = 0; i < 500; i++) {
        let j = first + i;
        if (j > stop) { break; }
        let t = f32(j) / last;
        let sr = maxR * sqrt(t);
        let a = f32(j) * seedAngle;
        minDist = min(minDist, length(uv - sr * vec2f(cos(a), sin(a))));
    }
    return mix(checkerboard7_output(uv), checkerboard8_output(uv), 1.0 - smoothstep(dotSize * 0.5, dotSize, minDist));
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return phyllotaxis1_output(uv);
}
